--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,46 @@ body {
     background-color: #fff;
     overflow: hidden;
 }
+
+.section {
+    margin-bottom: 20px;
+}
+
+.wireframe-section .section-content {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* Adjusted grid layout for the WIREFRAME section */
+    grid-gap: 10px;
+}
+
+.wireframe-section .item {
+    grid-column: 1 / span 3; /* Spanning two columns */
+}
+
+.wireframe-section .item.active {
+    background-color: rgba(255, 255, 255, 0.4);
+    border: 2px solid #000;
+}
+
+.section-title {
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.section-content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+}
+
+.item {
+    padding: 10px;
+    border: 1px solid #000;
+    text-align: center;
+    border-radius: 5px 5px 5px 5px;
+}
+
+.item.active {
+    background-color: rgba(255, 255, 255, 0.4);
+    border: 2px solid #000;
+}
